--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "Task",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#A19882",
-    "theme_color": "#FEF7DC",
+    "background_color": "#FFFFFF",
+    "theme_color": "#2E4C6D",
     "icons": [{
       "src": "./img/icons/homescreen48.png",
       "sizes": "48x48",
